# pyharmonics

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  rtd_requirements.txt
docs/: conf.py  index.rst
docs/source/: api.rst  conf.py  harmonic_search_guide.rst  index.rst  marketdata.rst  matrix.rst  modules.rst  plot.rst  plotting_guide.rst  pyharmonics.marketdata.rst  pyharmonics.plotter.rst  pyharmonics.rst  pyharmonics.search.rst  quick.rst  quick_start.rst  technicals.rst  technicals_guide.rst
src/pyharmonics/: __init__.py  constants.py  example.py  fundamentals.py  pattern.py  patterns.py  plotter.py  positions.py  quick.py  technicals.py  utils.py
src/pyharmonics/market_data/: base.py
src/pyharmonics/marketdata/: __init__.py  alpaca.py  binance_data.py  candle_base.py  yahoo.py
src/pyharmonics/ml/: model.py  poc.py
src/pyharmonics/plotter/: __init__.py  harmonic.py  option.py
src/pyharmonics/search/: __init__.py  divergence.py  harmonic.py  matrix.py
tests/: test_aplaca.py  test_binance.py  test_divergences.py  test_harmonic.py  test_market_data_base.py  test_matrix.py  test_plotter.py  test_technicals.py  test_utils.py  test_yahoo.py
tests/data/: btc_test_data  msft_test_data
